--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Local .terraform directories
 **/.terraform/*
+**/.terraform.tfstate.d/*
 
 # .tfstate files
 *.tfstate
@@ -35,3 +36,7 @@ override.tf.json
 # Ignore CLI configuration files
 .terraformrc
 terraform.rc
+
+deploy/provider/**/backend.tf
+deploy/provider/**/.terraform.lock.hcl
+scripts/terraform-hybrid/terraform-hybrid
